# overlays

./: .gitignore  CLAUDE.md  LICENSE  README.md  client.py  hatch_build.py  helpers.py  main.py  main_grok.py  overlays.py  pyproject.toml  stress_test_client.py
.github/workflows/: release_overlays.yml  test_overlays.yml
rust/overlays-server/: Cargo.toml
rust/overlays-server/src/: config.rs  ipc.rs  lib.rs  main.rs  protocol.rs  render.rs  server.rs  state.rs  ui.rs
rust/overlays-server/tests/: server_integration.rs
scripts/: build_release_bundle.py  smoke_test_wheel.py  stage_server_binary.py  verify_release_versions.py  verify_wheel.py  write_checksums.py
src/overlays/: _server_launcher.py  client.py  helpers.py  main.py  manager.py
tests/: conftest.py  test_main.py  test_stress_test_client.py
tests/client/: test_client.py
tests/helpers/: test_create_font.py  test_create_windows.py  test_position.py
tests/launcher/: test_server_launcher.py
tests/manager/: test_main.py  test_manager.py
tests/overlays/: test_main.py  test_measure_text.py
tests/overlays/client/: test_client.py
tests/overlays/helpers/: test_create_font.py  test_create_layered_window.py  test_create_windows.py  test_draw.py  test_gdi_context.py  test_position.py
tests/overlays/manager/: test_main.py
tests/rust_server/: test_rust_server_compat.py
