[project]
name = "overlays"
version = "2.1.1"
description = "Python client library and launcher for the overlays Rust server on Windows."
readme = "README.md"
authors = [
    { name = "Sergen Keskincelik", email = "sergen.keskincelik@aubex.de" },
    { name = "Marius Räsener", email = "marius.raesener@aubex.de" },
]
requires-python = ">=3.10"
dependencies = [
    "pywin32>=310; sys_platform == 'win32'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Win32 (MS Windows)",
]

[project.urls]
Homepage = "https://github.com/aubex/overlays"
Repository = "https://github.com/aubex/overlays"
Issues = "https://github.com/aubex/overlays/issues"

[project.scripts]
overlays = "overlays._server_launcher:main"
overlays-server = "overlays._server_launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overlays"]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.2"]
