[package]
name = "overlays-server"
version = "2.1.1"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
qrcode = { version = "0.14.1", default-features = false }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
